[tool.poetry]
name = "matrix-rain"
version = "0.1.0"
description = ""
authors = ["edius1987 <ediusferreira@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pygame = "^2.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
matrix = "matrix_rain.main:run"
